--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "typescript": "^3.9.7"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.13.1"
   }
 }
