--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
   "types": "dist/index.d.js",
   "scripts": {
     "build": "rollup -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Taylor J Pridgen",
   "license": "ISC",
   "devDependencies": {
+    "@testing-library/react": "^10.4.7",
+    "@types/jest": "^26.0.7",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
+    "jest": "^26.1.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rollup": "^2.22.1",
     "rollup-plugin-typescript2": "^0.27.1",
+    "ts-jest": "^26.1.3",
     "tslib": "^2.0.0",
     "typescript": "^3.9.7"
   },
