--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "afterburner",
+  "name": "@pridgey/afterburner",
   "version": "1.0.0",
   "description": "A style library to produce stylized, containerized html elements",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "build": "rollup -c",
     "test": "jest"
