--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^3.9.7"
   },
   "peerDependencies": {
-    "react": "^16.13.1"
+    "react": ">=16.13.1",
+    "react-dom": ">=16.13.1"
   }
 }
